alterada foto do index

--- a/portifolio Josias/index.html
+++ b/portifolio Josias/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>Portifólio Josias Nogueira</h1>
-    <img src="/home/josias/Downloads/josias.jpg" alt="Foto Josias Nogueira" width="100">
+    <img src="/home/josias/Desktop/Portifolio/foto josias.jpg" alt="Foto Josias Nogueira" width="100">
 
     <p>Índice</p><ul>
       <li><a href="#Eu">Quem sou eu</a> </li>
