--- a/portifolio Josias/index.html
+++ b/portifolio Josias/index.html
@@ -4,17 +4,31 @@
     <meta charset="UTF-8">
     <title>Portifólio</title>
   </head>
+  <style>
+    .name-font{
+      font-style: italic;
+      font-size: 20px;
+    }
+    .qualidades_font{
+      font-style: unset;
+      font-weight: 600;
+    }
+  body{
+    background-color: rgb(144, 174, 230);
+  }
+
+  </style>
   <body>
     <h1>Portifólio Josias Nogueira</h1>
-    <img src="/home/josias/Desktop/Portifolio/foto josias.jpg" alt="Foto Josias Nogueira" width="100">
+    <img src="/home/josias/Desktop/Portifolio/fotojosias.jpg"alt="Foto Josias Nogueira" width="100">
 
     <p>Índice</p><ul>
       <li><a href="#Eu">Quem sou eu</a> </li>
       <li><a href="#Qualidades">Qualidades</a> </li>
       <li><a href="#Diciplinas">Diciplinas</a> </li>
     </ul>
-    <p id="Eu"> Olá, meu nome é Josias nogueira, tenho 38 anos ,moro em Almirante Tamandare, PR, cidade metropolitana de Curitiba.
-    </p><ul>
+    <p id="Eu"> Olá, meu nome é<h2 class="name-font">Josias Nogueira</h2>,tenho 38 anos ,moro em Almirante Tamandare, PR, cidade metropolitana de Curitiba.
+    </p><ul class="qualidades_font">
     <li id="Qualidades">Sou uma pessoa bem extrovestida</li>
     <li>Comunicativo</li>
     <li>Gosto de trabalho em equipe</li>
