--- a/JosiasPortifolio/index.html
+++ b/JosiasPortifolio/index.html
@@ -6,6 +6,9 @@
   <title>Portifólio</title>
 </head>
 <style>
+  h1{
+    background-color: rgb(187, 93, 93);
+  }
   .name-font {
     font-style: italic;
     font-size: 20px;
@@ -17,13 +20,30 @@
   }
 
   body {
-    background-color: rgb(144, 174, 230);
+    background-color:white;
   }
+  p{
+    font-family: 'Lato', sans-serif;
+    font-size: 20px;
+  }
+  h4{
+    font-family: 'Lato', sans-serif;
+    font-size: 25px;
+    background-color: rgb(187, 93, 93);
+  }
+  ul{
+    font-family: 'Lato', sans-serif;
+    font-size: 20px;
+  }
+  .circle-image{
+    border-radius: 100%;
+  }
+
 </style>
 
 <body>
   <h1>Portifólio Josias Nogueira</h1>
-
+<img class="circle-image" src="./jn.jpg" alt="Foto Josias" width="100">
 
   <p>Índice</p>
   <ul>
@@ -40,7 +60,7 @@
     <li id="Qualidades">Sou uma pessoa bem extrovestida</li>
     <li>Comunicativo</li>
     <li>Gosto de trabalho em equipe</li>
-    <li>Busco aumentar conhecimento na area em que estou trabalhando sempre que possível</li>
+    <li>Busco aumentar o meu conhecimento na area em que estou trabalhando sempre que possível</li>
   </ul>
   <p>sou um estudante da escola de DEVs da Trybe, estou estudando na Trybe
     desde o dia 04/07/2022, onde vou estudar ao longo de 1 ano os seguintes conteúdos:</p>
@@ -73,6 +93,11 @@
   </ul>
   <p>Gosto de tirar minhas duvidas referente ao JS neste <a
       href="https://developer.mozilla.org/pt-BR/docs/Web/JavaScript" target="_blank">Link</a></p>
-</body>
+    <p>Projetos <a> colocar links</a>
+      <a> colocar links</a>
+      <a> colocar links</a>
+      <a> colocar links</a>
+    </p>
+    </body>
 
 </html>
